# OrcaSlicerMini

./: .gitignore  .gitmodules  BuildLinux.sh  CMakeLists.txt  CMakeLists.txt.user.7a29896  OrcaSlicer.cpp  OrcaSlicer_cli.cpp  OrcaSlicer_cli.hpp  README.md  build_in_ram.sh  copy_sources.sh  download_libs.sh  install_min_sys_deps.sh  install_sys_deps.sh  run.sh
3dModel/: cube.stl
libslic3r/: AppConfig.cpp  AppConfig.hpp  BuildVolume.cpp  CMakeLists.txt  ClipperUtils.cpp  Config.cpp  Config.hpp  CustomGCode.cpp  CustomGCode.hpp  ExPolygon.cpp  LayerRegion.cpp  MeshSplitImpl.hpp  Model.cpp  Model.hpp  NSVGUtils.hpp  PerimeterGenerator.cpp  PerimeterGenerator.hpp  Preset.cpp  Print.cpp  Print.hpp  PrintBase.cpp  PrintBase.hpp  PrintObject.cpp  PrintObjectSlice.cpp  ProjectTask.cpp  SlicesToTriangleMesh.cpp  Surface.cpp  Surface.hpp  SurfaceCollection.cpp  TriangleMesh.cpp  TriangleMeshSlicer.cpp  pchheader.hpp  utils.cpp
libslic3r/Algorithm/: LineSplit.cpp
libslic3r/Execution/: ExecutionTBB.hpp
libslic3r/Format/: 3mf.cpp  bbs_3mf.cpp  bbs_3mf.hpp
libslic3r/GCode/: Thumbnails.cpp
slic3r/GUI/: BackgroundSlicingProcess.cpp  GLCanvas3D.hpp  Plater.hpp
src/: CMakeLists.txt  OrcaSlicer_cli.cpp  OrcaSlicer_cli.hpp
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  CMakeLists.txt  Config.cpp  EdgeGrid.cpp  ExPolygon.hpp  FaceDetector.cpp  Layer.cpp  Layer.hpp  MeshSplitImpl.hpp  MinAreaBoundingBox.cpp  Model.cpp  NSVGUtils.cpp  NSVGUtils.hpp  ParameterUtils.hpp  PerimeterGenerator.cpp  Print.hpp  PrintApply.cpp  PrintBase.hpp  PrintConfig.cpp  PrintObject.cpp  PrintRegion.cpp  SlicesToTriangleMesh.cpp  TriangleMesh.cpp  pchheader.hpp  utils.cpp
src/libslic3r/Format/: 3mf.cpp  bbs_3mf.cpp  bbs_3mf.hpp  svg.cpp
src/libslic3r/GCode/: ThumbnailData.hpp
src/qhull/: CMakeLists.txt
